Grab MethodHandles.Lookup for event bus via asm supplier class loading, does not require startup parameter.
Not going for the full asm class creation way for improved compatibility.