@@ -15,12 +15,6 @@ As your Minecraft servers have to run without authentication (online-mode=false)
 
 To combat this, you need to restrict access to these servers for example with a firewall (please see [firewall guide](https://www.spigotmc.org/wiki/firewall-guide/)).
 
-Running
--------
-Running BungeeCord with Java 9 or higher requires the jvm argument `--add-opens java.base/java.lang.invoke=ALL-UNNAMED`
-
-A complete guide to installing BungeeCord for end users is available on [SpigotMC Wiki](https://www.spigotmc.org/wiki/bungeecord-installation/)
-
 Source
 ------
 Source code is currently available on [GitHub](https://www.spigotmc.org/go/bungeecord-git).
